Update configuration and environment files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,7 +151,8 @@ services:
       - N8N_HOSTNAME=${N8N_HOSTNAME:-":8001"}
       - WEBUI_HOSTNAME=${WEBUI_HOSTNAME:-":8002"}
       - FLOWISE_HOSTNAME=${FLOWISE_HOSTNAME:-":8003"}
-      - OLLAMA_HOSTNAME=${OLLAMA_HOSTNAME:-":8004"}
+      #===- OLLAMA_HOSTNAME=${OLLAMA_HOSTNAME:-":8004"}
+      - OLLAMA_HOST=host.docker.internal:11434
       - SUPABASE_HOSTNAME=${SUPABASE_HOSTNAME:-":8005"}
       - SEARXNG_HOSTNAME=${SEARXNG_HOSTNAME:-":8006"}
       - LANGFUSE_HOSTNAME=${LANGFUSE_HOSTNAME:-":8007"}
